--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,5 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 		FILES_MATCHING PATTERN "*.hpp"
 )
+
+add_subdirectory(example)
